# tinycdb-windows

./: CMakeLists.txt  README.md  cdb.c  cdb_make.c  cdb_make_put.c  cdb_seek.c  getopt.h  unistd.h
.github/workflows/: cmake.yml
windows/: unistd.h
